--- a/styles.css
+++ b/styles.css
@@ -393,7 +393,6 @@ h3 {
 }
 
 .contacts {
-    /* display: none; */
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -404,7 +403,6 @@ h3 {
         background-color: #3A3D46;
         border-top: 2px solid #0F94A7;
         font-size: 18px;
-        /* padding-top: 5px; */
 }
 
 .contacts .ul-icons{
@@ -424,7 +422,6 @@ h3 {
     color: #0F94A7;
 }
 
-/* ICONES */
 .fa-html5 {
     color: #DC4C25;
 }
@@ -672,15 +669,8 @@ h3 {
     }
 
     .contacts {
-        /* display: flex; */
-        /* flex-direction: column; */
-        /* align-items: center; */
-        justify-content: none;
-        /* position: absolute; */
         width: 100%;
         height:auto;
-        /* background-color: #3A3D46; */
-        /* border-top: 2px solid #0F94A7; */
         font-size: 16px;
     }
     .contacts .ul-icons{
@@ -688,18 +678,11 @@ h3 {
         position: relative;
         gap: 30px;
         margin: 3% 0;
-        /* border: 1px solid #FFF; */
-    }
-    .contacts p{
-        padding-bottom: 15px; /* conferir no celular*/
-        /* display: none; */
     }
 
-    /* .ul-icons {
-        position: relative;
-        gap: 30px;
-        margin: 3% 0;
-    } */
+    .contacts p{
+        padding-bottom: 15px;
+    }
 
     .ul-icons li:hover {
         transform: none;
