--- a/styles.css
+++ b/styles.css
@@ -305,24 +305,25 @@ h3 {
 }
 
 .row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-bottom: 200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;  
+    grid-auto-rows: 260px;
     margin-top: 5%;
+    padding-bottom: 200px;
 }
 
 .container-project {
-    width: 45%;
-    position: relative;
-    margin: 10px 10px 20px;
+    width: 90%;
+    margin: 10px auto;
     cursor: pointer;
+
 }
 
-.banner-main-img {
+.banner-main img {
     width: 100%;
     filter: contrast(30%);
     max-height: 250px;
+    height: 100%;
 }
 
 .banner-main {
@@ -330,6 +331,7 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: end;
+    height: 100%;
 }
 
 .ul-banner-main {
@@ -352,13 +354,14 @@ h3 {
 
 .description {
     background-color: #232630;
-    position: absolute;
-    top: 0;
+    position: relative;
     display: none;
     box-shadow: 0px 3px 10px 2px #858484;
     border-radius: 5px;
     padding: 10px 0;
     z-index: 99;
+    overflow-y: auto;
+    height: 100%;
 }
 
 .description h2 {
@@ -481,12 +484,11 @@ h3 {
 
 @keyframes closeDescription {
     from {
-        transform: translateX(0);
-
+        transform: translateY(-200px) 
     }
 
     to {
-        transform: translateY(-140px) scale(0.1);
+        transform: translateY(-200px) scale(0.1);
     }
 }
 
@@ -589,7 +591,9 @@ h3 {
         width: 45px;
         margin-top: 20%;
     }
-
+    .row{
+        grid-auto-rows: 240px;
+    }
     .ul-banner-main i {
         font-size: 28px;
     }
@@ -597,10 +601,10 @@ h3 {
     .ul-banner-main img {
         width: 35px;
     }
-
 }
 
 @media screen and (max-width:800px) {
+   
     .li-header {
         padding: 0 10px;
     }
@@ -619,11 +623,8 @@ h3 {
         margin: 5% auto 10%;
         font-size: 18px;
     }
-
-    .description {
-        display: none;
-        overflow-y: auto;
-        max-height: 200px;
+    .row {
+        grid-auto-rows: 200px;
     }
 
     .description h2 {
@@ -675,6 +676,10 @@ h3 {
         border-radius: 50%;
         margin: 0% auto;
         display: block;
+    }
+
+    .row{
+        grid-auto-rows: 230px;
     }
 
     .contacts {
@@ -748,11 +753,10 @@ h3 {
 
     .row {
         padding-bottom: 100px;
+        grid-auto-rows: 160px;
     }
-
-    .container-project {
-        width: 40%;
-        margin: 10px 5px 20px;
+    .description {
+        height: 230px;
     }
 
     .ul-banner-main {
