--- a/styles.css
+++ b/styles.css
@@ -337,7 +337,7 @@ h3 {
     position: absolute;
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 5px;
     background-color: #262627a4;
     width: 100%;
 }
@@ -787,15 +787,16 @@ h3 {
 
     .row {
         padding-bottom: 100px;
-        grid-auto-rows: 160px;
+        grid-template-columns: 100%;  
     }
-
+  
     .ul-banner-main {
-        gap: 5px;
+        align-items: center;
+        padding: 1% 0;
     }
 
     .ul-banner-main i {
-        font-size: 20px;
+        font-size: 28px;
     }
     .ul-banner-main .fa-android,
     .ul-banner-main .fa-apple {
@@ -803,7 +804,7 @@ h3 {
     }
 
     .ul-banner-main img {
-        width: 20px;
+        width: 35px;
     }
 
     .container-project li {
