--- a/styles.css
+++ b/styles.css
@@ -336,18 +336,21 @@ h3 {
 .ul-banner-main {
     position: absolute;
     display: flex;
+    align-items: center;
     justify-content: center;
-    gap: 5px;
+    flex-wrap: wrap;
+    gap: 2px;
     background-color: #262627a4;
     width: 100%;
+    padding: 5px 0;
 }
 
 .ul-banner-main img {
-    width: 38px;
+    width: 30px;
 }
 
 .container-project li {
-    font-size: 36px;
+    font-size: 30px;
     list-style: none;
 }
 
@@ -602,7 +605,7 @@ h3 {
     }
 
     .ul-banner-main img {
-        width: 35px;
+        width: 28px;
     }
 }
 
@@ -662,7 +665,7 @@ h3 {
     }
 
     .ul-banner-main img {
-        width: 28px;
+        width: 22px;
     }
 
 }
@@ -790,21 +793,17 @@ h3 {
         grid-template-columns: 100%;  
     }
   
-    .ul-banner-main {
-        align-items: center;
-        padding: 1% 0;
+    .ul-banner-main i {
+        font-size: 30px;
     }
 
-    .ul-banner-main i {
-        font-size: 28px;
-    }
     .ul-banner-main .fa-android,
     .ul-banner-main .fa-apple {
         font-size: 15px;
     }
 
     .ul-banner-main img {
-        width: 35px;
+        width: 30px;
     }
 
     .container-project li {
